# code-agent

./: .env.example  .gitignore  LICENSE  README.md  procedural_web_requirements.txt  pyproject.toml  requirements.txt  setup.py
ProceduralWebsite/: setup.py
code_agent/: __init__.py  cli.py  config.py  environment_validator.py  main.py  test_runner.py  ui.py  ui_launcher.py
code_agent/agents/: __init__.py  architect.py  base.py  developer.py  environment.py  orchestrator.py  reviewer.py  tester.py
code_agent/models/: __init__.py  model_manager.py
code_agent/tools/: __init__.py  code_tools.py  development_manager.py  environment_tools.py  filesystem_tools.py  github_tools.py  test_tools.py
code_agent/utils/: __init__.py  code_utils.py  helpers.py  logger.py  project_utils.py
docs/: api.md  architecture.md  usage.md
tests/: __init__.py  test_code_utils.py  test_config.py  test_github_tools.py  test_integration.py  test_project_utils.py
tests/test_agents/: __init__.py
tests/test_tools/: __init__.py
